# touhouc

./: .drone.yml  .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindSDL2.cmake
src/: CMakeLists.txt  main.c
src/common/: vector.h
src/particles/: emitter.h  manager.c  manager.h  particle.h
src/world/: world.c  world.h
